--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,17 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+
+        <string name="alert_unit">Choice your Unit</string>
+
+        <string-array name="unit_item">
+            <item>Pill(s)</item>
+            <item>A</item>
+            <item>B</item>
+            <item>C</item>
+            <item>D</item>
+        </string-array>
+
+
 </resources>
